--- a/recom.ipynb
+++ b/recom.ipynb
@@ -1425,10 +1425,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "18f9d32a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'user_category_matrix_log' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# user_category_matrix_log is CustomerID x Category (log-transformed spend)\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m similarity_matrix \u001b[38;5;241m=\u001b[39m cosine_similarity(\u001b[43muser_category_matrix_log\u001b[49m)\n\u001b[0;32m      6\u001b[0m similarity_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(similarity_matrix, index\u001b[38;5;241m=\u001b[39muser_category_matrix_log\u001b[38;5;241m.\u001b[39mindex, columns\u001b[38;5;241m=\u001b[39muser_category_matrix_log\u001b[38;5;241m.\u001b[39mindex)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_cbf_recommendations\u001b[39m(user_id, top_k_users\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, top_n_items\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m):\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;66;03m# Find top-k similar users (excluding self)\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'user_category_matrix_log' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import numpy as np\n",
@@ -1443,48 +1455,8 @@
     "    # Aggregate spend vectors\n",
     "    aggregated = user_category_matrix_log.loc[similar_users].mean()\n",
     "    top_categories = aggregated.sort_values(ascending=False).head(top_n_items).index.tolist()\n",
-    "    return top_categories\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "ff21da21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mlxtend.frequent_patterns import apriori, association_rules\n",
-    "\n",
-    "# Binary basket: user x category\n",
-    "basket = (transactions_df.groupby(['CustomerID', 'Category'], observed=False)\n",
-    "          .size().unstack(fill_value=0).astype(bool))\n",
-    "\n",
-    "frequent_itemsets = apriori(basket, min_support=0.01, use_colnames=True)\n",
-    "rules = association_rules(frequent_itemsets, metric='confidence', min_threshold=0.3)\n",
-    "\n",
-    "# Create a mapping from antecedent -> consequents\n",
-    "from collections import defaultdict\n",
-    "\n",
-    "rule_dict = defaultdict(list)\n",
-    "for _, row in rules.iterrows():\n",
-    "    ant = tuple(row['antecedents'])\n",
-    "    cons = list(row['consequents'])\n",
-    "    rule_dict[ant].extend(cons)\n",
-    "\n",
-    "# Recommend based on user's current categories\n",
-    "def get_association_recommendations(user_id, top_n=3):\n",
-    "    user_items = basket.loc[user_id]\n",
-    "    owned = set(user_items[user_items == True].index)\n",
-    "\n",
-    "    # Find rules where user owns all items in antecedent\n",
-    "    recs = []\n",
-    "    for ant, cons in rule_dict.items():\n",
-    "        if set(ant).issubset(owned):\n",
-    "            recs.extend(cons)\n",
-    "\n",
-    "    # Return top unique recommendations not already owned\n",
-    "    recs = [r for r in recs if r not in owned]\n",
-    "    return list(dict.fromkeys(recs))[:top_n]  # remove duplicates\n"
+    "    return top_categories\n",
+    "similarity_df\n"
    ]
   },
   {
