--- a/main.ipynb
+++ b/main.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": null,
    "id": "fca859e3",
    "metadata": {},
    "outputs": [],
@@ -699,7 +699,6 @@
     "                 np.where(df[column] < lower_bound, lower_bound, df[column]))\n",
     "    return df\n",
     "\n",
-    "# Example: cap BillingAmount outliers\n",
     "transactions_df = cap_outliers_iqr(transactions_df, 'BillingAmount')"
    ]
   },
@@ -748,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": null,
    "id": "1aed9946",
    "metadata": {},
    "outputs": [],
@@ -756,7 +755,7 @@
     "# 1. Global item frequency\n",
     "item_freq = (\n",
     "    transactions_df\n",
-    "    .groupby('MCC')          # or 'Category', MerchantID, etc.\n",
+    "    .groupby('MCC')         \n",
     "    .size()\n",
     "    .rename('item_freq')\n",
     ")\n",
@@ -1347,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": null,
    "id": "5deac5c9",
    "metadata": {},
    "outputs": [
@@ -1372,8 +1371,6 @@
     "    diversity = (distances.sum() - n) / (n*(n-1))\n",
     "    return diversity\n",
     "\n",
-    "# Example usage requires item features (e.g., category embeddings)\n",
-    "# Suppose user_category_matrix_log is your item feature matrix transpose\n",
     "def coverage(all_recommendations, total_items):\n",
     "    recommended_items = set(item for recs in all_recommendations.values() for item in recs)\n",
     "    return len(recommended_items) / total_items\n",
@@ -2193,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": null,
    "id": "6e260995",
    "metadata": {},
    "outputs": [],
@@ -2201,20 +2198,13 @@
     "# Helper: return list of items (columns) where the user had activity\n",
     "\n",
     "def get_actual_items(user_id):\n",
-    "    \"\"\"\n",
-    "    From user_category_matrix (rows = users, columns = items/categories),\n",
-    "    return a list of item names that have non‑zero interactions for the\n",
-    "    given user. Returns an empty list if the user_id is not found.\n",
-    "    \"\"\"\n",
+    "\n",
     "    if user_id not in user_category_matrix.index:\n",
     "        return []\n",
     "    # Boolean mask: columns where spend > 0\n",
     "    return user_category_matrix.columns[user_category_matrix.loc[user_id] > 0].tolist()\n",
     "\n",
     "def test_hybrid_model(user_ids, N=5):\n",
-    "    \"\"\"\n",
-    "    Show actual items, predicted items, and hits for Hybrid model for a list of users.\n",
-    "    \"\"\"\n",
     "    rows = []\n",
     "\n",
     "    for user_id in user_ids:\n",
@@ -2247,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": null,
    "id": "f1a4e3d8",
    "metadata": {},
    "outputs": [
@@ -2294,7 +2284,7 @@
     }
    ],
    "source": [
-    "sample_users = list(user_category_matrix.index[:10])  # or use random.sample(...)\n",
+    "sample_users = list(user_category_matrix.index[:10])  \n",
     "hybrid_results = test_hybrid_model(sample_users, N=5)\n",
     "\n",
     "# Show detailed results\n",
