--- a/main.ipynb
+++ b/main.ipynb
@@ -1312,6 +1312,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bd6d4c1",
+   "metadata": {},
+   "source": [
+    "Model Development"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 326,
    "id": "8277f03e",
